--- a/KN01.md
+++ b/KN01.md
@@ -42,6 +42,8 @@ Commands für das starten und stoppen von Instanzen
 ```
 Shell einer Instanze
 ```
+![Multilist Screenshot](./Images/ShellCommand.png)
+
 ![Multilist Screenshot](./Images/LoadingShell.png)
 
 ![Multilist Screenshot](./Images/shell.png)
