--- a/KN04/KN04.md
+++ b/KN04/KN04.md
@@ -1,4 +1,20 @@
-# KN03
+# KN04
 
 # A)  Portierung von Multipass zu AWS
 
+
+
+![Alt](../Images/KN04Instances.png)
+![Alt](../Images/WebsitePublicIP.png)
+![Alt](../Images/DBPublicIP.png)
+![Alt](../Images/indexKN04.png)
+![Alt](../Images/infoKN04.png)
+![Alt](../Images/adminerKN04.png)
+![Alt](../Images/adminerLogin.png)
+
+# B) Speicher
+
+## a) Welchem Speichermodell wird S3 zugeordnet?
+S3 Amazon gehört zum Objektspeicher-Modell. Das Objektspeicher-Modell ist ein Speichermodell, bei dem Daten als Objekte in einem flachen Raum gespeichert werden. Jedes Objekt hat einen spezifischen Schlüssel, der Dateninhalt und Metadaten enthält. Die Daten können in der Regel über eine REST-API abgerufen und über HTTP-GET-Anforderungen heruntergeladen werden.
+
+## b) 
