--- a/KN05/KN05.md
+++ b/KN05/KN05.md
@@ -6,3 +6,27 @@
 ![Alt](../Images/DeletedNetworkInterfaces.png)
 ![Alt](../Images/DeletedSecurityGroups.png)
 ![Alt](../Images/DeletedSubnet.png)
+
+# B) Netzwerk und Sicherheit Einrichten
+
+## Subnetz
+![Alt](../Images/SubnetKN05.png)
+![Alt](../Images/SubnetPUBLICIP.png)
+![Alt](../Images/SubnetList.png)
+## Security Groups
+![Alt](../Images/SecurityGroupErstellung.png)
+![Alt](../Images/SecurityGroupsListKN05.png)$
+## Elastic IP
+![Alt](../Images/ElasticIP.png)
+## Network Interface
+![Alt](../Images/NetworkInterfaceKN05.png)
+## Create Instance
+![Alt](../Images/NetworkSettingInstance.png)
+
+![Alt](../Images/KN05Index.png)
+![Alt](../Images/KN05Info.png)
+![Alt](../Images/KN05adminer.png)
+
+
+
+
