--- a/KN05/KN05.md
+++ b/KN05/KN05.md
@@ -15,7 +15,7 @@
 ![Alt](../Images/SubnetList.png)
 ## Security Groups
 ![Alt](../Images/SecurityGroupErstellung.png)
-![Alt](../Images/SecurityGroupsListKN05.png)$
+![Alt](../Images/SecurityGroupsListKN05.png)
 ## Elastic IP
 ![Alt](../Images/ElasticIP.png)
 ## Network Interface
