--- a/KN06/KN06.md
+++ b/KN06/KN06.md
@@ -1,5 +1,22 @@
 # KN06
 
-# A)  Swagger
+# A)  Installation App
 
 ![Alt](../Images/Swagger.png)
+![Alt](../Images/SwaggerDB.png)
+
+# A)  Vertikale Skalierung
+
+Veränderung von Volume für DB:
+
+![Alt](../Images/Volumeverändern.png)
+
+```Beim verändern des Volumes ist ein Fehler aufgetreten.```
+
+![Alt](../Images/Error.png)
+
+Veränderung von Instanztypen für DB:
+
+Es wurde auf t2.medium gewechselt.
+
+![Alt](../Images/InstanceTypeMedium.png)
